--- a/e2e/tsconfig.json
+++ b/e2e/tsconfig.json
@@ -12,8 +12,9 @@
     "outDir": "../dist/out-tsc-e2e",
     "sourceMap": true,
     "target": "es6",
-    "typeRoots": [
-      "../node_modules/@types"
+    "types": [
+      "jasmine",
+      "node"
     ]
   }
 }
